# insurance-dispersion

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  run_tests_databricks.py
benchmarks/: benchmark.py
databricks/: benchmark.py
notebooks/: benchmark_dispersion.py  dglm_demo.py
src/insurance_dispersion/: __init__.py  diagnostics.py  families.py  fitting.py  model.py  results.py
tests/: test_diagnostics.py  test_expanded_coverage.py  test_families.py  test_fitting.py  test_model.py
