[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-dispersion"
version = "0.1.1"
description = "Double GLM (DGLM) for joint modelling of mean and dispersion in insurance pricing"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" }
]
keywords = ["insurance", "actuarial", "DGLM", "dispersion", "GLM", "pricing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "formulaic>=0.6",
]

[project.optional-dependencies]
plots = ["matplotlib>=3.7"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-dispersion"
Repository = "https://github.com/burning-cost/insurance-dispersion"
Issues = "https://github.com/burning-cost/insurance-dispersion/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_dispersion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
